--- a/menu-v2.html
+++ b/menu-v2.html
@@ -8,7 +8,7 @@
 <meta content="Insurance, Health, Agency" name="description"/>
 <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
 <!--====== Title ======-->
-<title>Foodix - Fast Foods &amp; Restaurants HTML Template</title>
+<title>Pizzaria Lunamar - Cardápio</title>
 <!--====== Favicon Icon ======-->
 <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png"/>
 <!--====== Google Fonts ======-->
@@ -186,10 +186,10 @@
 <div class="col-lg-12">
 <!--=== Page Banner Content ===-->
 <div class="page-banner-content text-center">
-<h1 class="page-title">Menu Restaurant</h1>
+<h1 class="page-title">Nosso Cardápio</h1>
 <ul class="breadcrumb-link">
-<li><a href="index.html">Home</a></li>
-<li class="active">Menu Restaurant</li>
+<li><a href="index.html">Início</a></li>
+<li class="active">Cardápio</li>
 </ul>
 </div>
 </div>
