--- a/about.html
+++ b/about.html
@@ -512,6 +512,8 @@
                 </div>
             </div>
     </footer><!--====== End Footer ======-->
+    <!--====== Atualiza o ano automaticamente  ======-->
+    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     <!--====== Back To Top  ======-->
     <a class="back-to-top" href="about.html"><i class="far fa-angle-up"></i></a>
     <!--====== Jquery js ======-->
