--- a/history.html
+++ b/history.html
@@ -408,6 +408,8 @@
                 </div>
             </div>
     </footer><!--====== End Footer ======-->
+    <!--====== Atualiza o ano automaticamente  ======-->
+    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     <!--====== Back To Top  ======-->
     <a class="back-to-top" href="history.html"><i class="far fa-angle-up"></i></a>
     <!--====== Jquery js ======-->
