--- a/menu-v2.html
+++ b/menu-v2.html
@@ -566,7 +566,7 @@
             </div>
         </div>
     </section><!--====== End Menu Section ======-->
-    <!--=== Start Footer ===-->
+    <!--====== Start Footer ======-->
     <footer class="footer-default p-r z-1">
         <div class="footer-shape f-shape_one scene"><span data-depth=".3"><img alt="shape"
                     src="assets/images/shape/shape-2.png" /></span></div>
@@ -575,9 +575,8 @@
         <div class="footer-shape f-shape_three scene"><span data-depth=".5"><img alt="shape"
                     src="assets/images/shape/shape-4.png" /></span></div>
         <div class="footer-shape f-shape_four scene"><span data-depth=".6"><img alt="shape"
-                    src="assets/images/shape/shape-5.png" /></span></div>
-        <div class="footer-shape f-shape_five scene"><span data-depth=".7"><img alt="shape"
-                    src="assets/images/shape/shape-6.png" /></span></div>
+                    src="assets/images/shape/shape-8.png" /></span></div>
+        <!-- <div class="footer-shape f-shape_five scene"><span data-depth=".7"><img alt="shape" src="assets/images/shape/shape-6.png"/></span></div> -->
         <div class="footer-shape f-shape_six scene"><span data-depth=".8"><img alt="shape"
                     src="assets/images/shape/shape-7.png" /></span></div>
         <div class="footer-shape f-shape_seven scene"><span data-depth=".9"><img alt="shape"
@@ -594,16 +593,15 @@
                                     <a href="index.html"><img alt="Brand Logo"
                                             src="assets/images/logo/logo-white.png" /></a>
                                 </div>
-                                <p>Discover culinary delights recipes
-
-                                    and inspiration in our delightful
-
-                                    food haven..</p>
+                                <p class="fw-bolder">Pode ligar, a lunamar vai entregar!</p>
                                 <ul class="social-link">
-                                    <li><a href="menu-v2.html"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="menu-v2.html"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="menu-v2.html"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="menu-v2.html"><i class="fab fa-youtube"></i></a></li>
+                                    <li><a href="https://www.facebook.com/PizzariaLunamar" target="_blank"
+                                            rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></li>
+                                    <!-- <li><a href="index.html"><i class="fab fa-twitter"></i></a></li> -->
+                                    <li><a href="https://www.instagram.com/pizzarialunamar/" target="_blank"
+                                            rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://wa.me/5512997255608" target="_blank"
+                                            rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -612,11 +610,12 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-contact-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Contact Us</h4>
+                                <h4 class="widget-title">Contatos</h4>
                                 <ul class="address-list">
-                                    <li>1901 Thornridge Cir. Shiloh, Hawaii 81063</li>
-                                    <li><a href="tel:+88-344-667-999">+88-344-667-999</a></li>
-                                    <li><a href="mailto:order@barger.com">order@foodix.com</a></li>
+                                    <li><a>Av Geraldo Nogueira da Silva, 1136, Caraguatatuba, Sao Paulo, Brazil
+                                            11667700</a></li>
+                                    <li><a>+55 12 99725-5608</a></li>
+                                    <li><a>lunamar@pizzarialunamar.com.br</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -625,13 +624,13 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-nav-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Quick Link</h4>
+                                <h4 class="widget-title">Links rápidos</h4>
                                 <ul class="widget-menu">
-                                    <li><a href="menu-v2.html">Home</a></li>
-                                    <li><a href="menu-v2.html">About Us</a></li>
-                                    <li><a href="menu-v2.html">Services</a></li>
-                                    <li><a href="menu-v2.html">Our Menu</a></li>
-                                    <li><a href="menu-v2.html">Gallery</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Cardápio</a></li>
+                                    <li><a href="index.html">Sobre</a></li>
+                                    <li><a href="index.html">Galeria</a></li>
+                                    <li><a href="index.html">Contato</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -640,13 +639,14 @@
                         <!--=== Footer Widget ===-->
                         <div class="footer-widget footer-opening-widget mb-40 wow fadeInUp">
                             <div class="widget-content">
-                                <h4 class="widget-title">Opining time</h4>
+                                <h4 class="widget-title">Horários de atendimento</h4>
                                 <ul class="opening-schedule">
-                                    <li>Monday<span>: 10.00am - 05.00pm </span></li>
-                                    <li>Tuesday<span>: 10.20am - 05.30pm </span></li>
-                                    <li>Wednesday<span>: 10.30am - 05.50pm </span></li>
-                                    <li>Thursday<span>: 11.00am - 07.10pm </span></li>
-                                    <li>Friday : <span class="of-close">Closed</span></li>
+                                    <li>Domingo<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Segunda: <span class="of-close"> Fechado </span></li>
+                                    <li>Terça<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Quarta<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Quinta<span>: 06.00pm - 12.00am </span></li>
+                                    <li>Sexta: <span>: 06.00pm - 12.00am </span></li>
                                 </ul>
                             </div>
                         </div>
@@ -658,13 +658,14 @@
         <div class="copyright-area text-center">
             <div class="container">
                 <div class="copyright-text">
-                    <p>© 2024 All rights reserved design by Pixelfit</p>
+                    <p>© <span id="year"></span> Lunamar todos os direitos reservados</p>
                 </div>
             </div>
-        </div>
-    </footer><!--=== End Footer ===-->
-    <!--====== Back To Top  ======-->
-    <a class="back-to-top" href="menu-v2.html"><i class="far fa-angle-up"></i></a>
+    </footer><!--====== End Footer ======-->
+    <!--====== Atualiza o ano automaticamente  ======-->
+    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+    <!--====== WhatsApp Button  ======-->
+    <a class="whatsapp-button" href="https://wa.me/5512997255608" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <!--====== Jquery js ======-->
     <script src="assets/vendor/jquery-3.6.0.min.js"></script>
     <!--====== Popper js ======-->
