--- a/blog-details.html
+++ b/blog-details.html
@@ -525,7 +525,7 @@
 </div>
 </div>
 </footer><!--====== End Footer ======-->
-<!--====== Back To Top  ======-->
+<!--====== Back To Topp ======-->
 <a class="back-to-top" href="blog-details.html"><i class="far fa-angle-up"></i></a>
 <!--====== Jquery js ======-->
 <script src="assets/vendor/jquery-3.6.0.min.js"></script>
