--- a/faq.html
+++ b/faq.html
@@ -474,7 +474,7 @@
     </footer>
     <!--====== End Footer ======-->
     
-    <!--====== Back To Top  ======-->
+    <!--====== Back To Topp ======-->
     <a class="back-to-top" href="faq.html"><i class="far fa-angle-up"></i></a>
     <!--====== Jquery js ======-->
     <script src="assets/vendor/jquery-3.6.0.min.js"></script>
