--- a/gallery.html
+++ b/gallery.html
@@ -430,7 +430,7 @@
     </footer><!--====== End Footer ======-->
     <!--====== Atualiza o ano automaticamente  ======-->
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-    <!--====== Back To Top  ======-->
+    <!--====== Back To Topp ======-->
     <a class="back-to-top" href="gallery.html"><i class="far fa-angle-up"></i></a>
     <!--====== Jquery js ======-->
     <script src="assets/vendor/jquery-3.6.0.min.js"></script>
