--- a/index-beef.html
+++ b/index-beef.html
@@ -53,32 +53,40 @@
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-beef.html">
-<img alt="cart image" src="assets/images/product/cart-1.jpg"/>
-                                    Urban Bourbon Bliss Ribeye
+<img alt="cart image" src="assets/images/product/cart-1.jpg"/>
+
+                                    Urban Bourbon Bliss Ribeye
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-beef.html">
-<img alt="cart image" src="assets/images/product/cart-2.jpg"/>
-                                    Artisanal Truffle Tango Sirloin
+<img alt="cart image" src="assets/images/product/cart-2.jpg"/>
+
+                                    Artisanal Truffle Tango Sirloin
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-beef.html">
-<img alt="cart image" src="assets/images/product/cart-3.jpg"/>
-                                    Smoked Paprika Perfection
+<img alt="cart image" src="assets/images/product/cart-3.jpg"/>
+
+                                    Smoked Paprika Perfection
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-beef.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-beef.html">
-<img alt="cart image" src="assets/images/product/cart-4.jpg"/>
-                                    Tandoori Temptation Tender
+<img alt="cart image" src="assets/images/product/cart-4.jpg"/>
+
+                                    Tandoori Temptation Tender
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
@@ -227,7 +235,8 @@
 <!--=== Section Title ===-->
 <div class="section-title mb-50 wow fadeInDown">
 <span class="sub-title"><i class="flaticon-food-tray"></i>Food Items</span>
-<h2>Our Delicious 
+<h2>Our Delicious 
+
                                 Offerings</h2>
 </div>
 <!--=== Food Item ===-->
@@ -796,7 +805,8 @@
 <div class="section-content-box wow fadeInLeft mb-50">
 <div class="section-title mb-50 text-white">
 <span class="sub-title"><i class="flaticon-food-tray"></i>Reservation</span>
-<h2>Need reservation? 
+<h2>Need reservation? 
+
                                         booking your table now</h2>
 </div>
 <div class="happy-button">
@@ -986,7 +996,8 @@
 <span><i class="far fa-user-alt"></i><a href="index-beef.html">By David</a></span>
 <span><i class="far fa-comment"></i><a href="index-beef.html">Comment (2)</a></span>
 </div>
-<h4 class="title"><a href="blog-details.html">Dish with vegetables and roasted 
+<h4 class="title"><a href="blog-details.html">Dish with vegetables and roasted 
+
                                     Steak meat</a></h4>
 <p>Crispy stovetop red potatoes, seasoned to perfection, golden and delicious.</p>
 <a class="read-more style-one" href="blog-details.html">Read More</a>
@@ -1004,7 +1015,8 @@
 <span><i class="far fa-user-alt"></i><a href="index-beef.html">By David</a></span>
 <span><i class="far fa-comment"></i><a href="index-beef.html">Comment (2)</a></span>
 </div>
-<h4 class="title"><a href="blog-details.html">Handi Beef biriyani with tomato &amp;
+<h4 class="title"><a href="blog-details.html">Handi Beef biriyani with tomato &amp;
+
                                     Special salads </a></h4>
 <p>Make Jimmy soft-boiled eggs at home with tender whites and creamy yolks.</p>
 <a class="read-more style-one" href="blog-details.html">Read More</a>
@@ -1022,7 +1034,8 @@
 <span><i class="far fa-user-alt"></i><a href="index-beef.html">By David</a></span>
 <span><i class="far fa-comment"></i><a href="index-beef.html">Comment (2)</a></span>
 </div>
-<h4 class="title"><a href="blog-details.html">Kebabs with a side of cucumber 
+<h4 class="title"><a href="blog-details.html">Kebabs with a side of cucumber 
+
                                     salad best food</a></h4>
 <p>Warm, traditional soft pretzels served with rich, sweet beer cheese dip.</p>
 <a class="read-more style-one" href="blog-details.html">Read More</a>
@@ -1103,8 +1116,10 @@
 <div class="footer-logo mb-25">
 <a href="index.html"><img alt="Brand Logo" src="assets/images/logo/logo-white.png"/></a>
 </div>
-<p>Discover culinary delights recipes 
-                                        and inspiration in our delightful 
+<p>Discover culinary delights recipes 
+
+                                        and inspiration in our delightful 
+
                                         food haven..</p>
 <ul class="social-link">
 <li><a href="index-beef.html"><i class="fab fa-facebook-f"></i></a></li>
@@ -1155,7 +1170,7 @@
 <li>Thursday<span>: 11.00am - 07.10pm </span></li>
 <li>Friday : <span class="of-close">Closed</span></li>
 </ul>
-</div>
+<!--====== Back To Topp ======-->
 </div>
 </div>
 </div>
