--- a/index-pizza.html
+++ b/index-pizza.html
@@ -51,32 +51,40 @@
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-pizza.html">
-<img alt="cart image" src="assets/images/product/cart-1.jpg"/>
-                                    Urban Bourbon Bliss Ribeye
+<img alt="cart image" src="assets/images/product/cart-1.jpg"/>
+
+                                    Urban Bourbon Bliss Ribeye
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-pizza.html">
-<img alt="cart image" src="assets/images/product/cart-2.jpg"/>
-                                    Artisanal Truffle Tango Sirloin
+<img alt="cart image" src="assets/images/product/cart-2.jpg"/>
+
+                                    Artisanal Truffle Tango Sirloin
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-pizza.html">
-<img alt="cart image" src="assets/images/product/cart-3.jpg"/>
-                                    Smoked Paprika Perfection
+<img alt="cart image" src="assets/images/product/cart-3.jpg"/>
+
+                                    Smoked Paprika Perfection
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="index-pizza.html"><i class="far fa-trash-alt"></i></a>
 <a href="index-pizza.html">
-<img alt="cart image" src="assets/images/product/cart-4.jpg"/>
-                                    Tandoori Temptation Tender
+<img alt="cart image" src="assets/images/product/cart-4.jpg"/>
+
+                                    Tandoori Temptation Tender
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
@@ -198,7 +206,8 @@
 <div class="col-lg-8">
 <!--=== Hero Content ===-->
 <div class="hero-content">
-<h1 class="wow fadeInDown" data-wow-delay=".5s">Cheese
+<h1 class="wow fadeInDown" data-wow-delay=".5s">Cheese
+
                                     Delight Pizza</h1>
 <p class="wow fadeInDown" data-wow-delay=".6s">Savor the perfection of our Italian Cheese Pizza—crispy golden crust, premium mozzarella, Parmesan, and ricotta...</p>
 <div class="hero-button wow fadeInDown" data-wow-delay=".7s">
@@ -307,7 +316,8 @@
 <div class="section-title text-center mb-55 wow fadeInDown">
 <span class="sub-title">Choose your flavor</span>
 <h2>Our Special pizza</h2>
-<p>Indulge in the extraordinary with Our Special Pizza. A tantalizing blend of succulent toppings, 
+<p>Indulge in the extraordinary with Our Special Pizza. A tantalizing blend of succulent toppings, 
+
                                 premium cheeses, and a secret sauce, crafted to perfection.</p>
 </div>
 </div>
@@ -350,7 +360,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cheese Pizza</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>121</p>
 </div>
@@ -367,7 +378,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Pesto Paradise</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>159</p>
 </div>
@@ -384,7 +396,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cali Fiesta Pie</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>210</p>
 </div>
@@ -405,7 +418,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cheese Pizza</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>121</p>
 </div>
@@ -422,7 +436,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Pesto Paradise</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>159</p>
 </div>
@@ -439,7 +454,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cali Fiesta Pie</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>210</p>
 </div>
@@ -460,7 +476,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cheese Pizza</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>121</p>
 </div>
@@ -477,7 +494,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Pesto Paradise</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>210</p>
 </div>
@@ -494,7 +512,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cali Fiesta Pie</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>159</p>
 </div>
@@ -515,7 +534,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cheese Pizza</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>121</p>
 </div>
@@ -532,7 +552,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Pesto Paradise</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>154</p>
 </div>
@@ -549,7 +570,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cali Fiesta Pie</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>98</p>
 </div>
@@ -595,7 +617,8 @@
 <div class="section-title text-center mb-55 wow fadeInDown">
 <span class="sub-title">Choose your flavor</span>
 <h2>the best food in town</h2>
-<p>Indulge in the extraordinary with Our Special Pizza. A tantalizing blend of succulent toppings, 
+<p>Indulge in the extraordinary with Our Special Pizza. A tantalizing blend of succulent toppings, 
+
                                 premium cheeses, and a secret sauce, crafted to perfection. </p>
 </div>
 </div>
@@ -608,7 +631,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">Cheese Pizza</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>210</p>
 </div>
@@ -669,7 +693,8 @@
 </div>
 <div class="menu-info">
 <h3 class="title"><a href="menu-details.html">pepperoni Pizza</a></h3>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                     crust a timeless cheese pizza</p>
 <p class="price"><span class="currency">$</span>170</p>
 </div>
@@ -869,7 +894,8 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+
                                         each image.</p>
 <ul class="ratings rating-four">
 <li><i class="fas fa-star"></i></li>
@@ -892,7 +918,8 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+
                                         each image.</p>
 <ul class="ratings rating-four">
 <li><i class="fas fa-star"></i></li>
@@ -915,7 +942,8 @@
 <span>A week ago</span>
 </div>
 </div>
-<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+<p>Explore 'Our Gallery'—a visual symphony of delectable pizzas. Feast your eyes on our culinary creations,
+
                                         each image.</p>
 <ul class="ratings rating-four">
 <li><i class="fas fa-star"></i></li>
@@ -1060,8 +1088,10 @@
 <div class="footer-logo mb-25">
 <a href="index.html"><img alt="Brand Logo" src="assets/images/logo/logo-white.png"/></a>
 </div>
-<p>Discover culinary delights recipes 
-                                        and inspiration in our delightful 
+<p>Discover culinary delights recipes 
+
+                                        and inspiration in our delightful 
+
                                         food haven..</p>
 <ul class="social-link">
 <li><a href="index-pizza.html"><i class="fab fa-facebook-f"></i></a></li>
@@ -1097,7 +1127,7 @@
 <li><a href="index-pizza.html">Our Menu</a></li>
 <li><a href="index-pizza.html">Gallery</a></li>
 </ul>
-</div>
+<!--====== Back To Topp ======-->
 </div>
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
