--- a/menu-details.html
+++ b/menu-details.html
@@ -51,32 +51,40 @@
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="menu-details.html"><i class="far fa-trash-alt"></i></a>
 <a href="menu-details.html">
-<img alt="cart image" src="assets/images/product/cart-1.jpg"/>
-                                    Urban Bourbon Bliss Ribeye
+<img alt="cart image" src="assets/images/product/cart-1.jpg"/>
+
+                                    Urban Bourbon Bliss Ribeye
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="menu-details.html"><i class="far fa-trash-alt"></i></a>
 <a href="menu-details.html">
-<img alt="cart image" src="assets/images/product/cart-2.jpg"/>
-                                    Artisanal Truffle Tango Sirloin
+<img alt="cart image" src="assets/images/product/cart-2.jpg"/>
+
+                                    Artisanal Truffle Tango Sirloin
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="menu-details.html"><i class="far fa-trash-alt"></i></a>
 <a href="menu-details.html">
-<img alt="cart image" src="assets/images/product/cart-3.jpg"/>
-                                    Smoked Paprika Perfection
+<img alt="cart image" src="assets/images/product/cart-3.jpg"/>
+
+                                    Smoked Paprika Perfection
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
 <li class="foodix-menu-cart">
 <a class="remove-cart" href="menu-details.html"><i class="far fa-trash-alt"></i></a>
 <a href="menu-details.html">
-<img alt="cart image" src="assets/images/product/cart-4.jpg"/>
-                                    Tandoori Temptation Tender
+<img alt="cart image" src="assets/images/product/cart-4.jpg"/>
+
+                                    Tandoori Temptation Tender
+
                                 </a>
 <span class="quantity">1 × <span><span class="currency">$</span>940.00</span></span>
 </li>
@@ -364,7 +372,8 @@
 </div>
 <div class="menu-info">
 <h4 class="title"><a href="menu-v3.html">Cheese Pizza</a></h4>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                             crust a timeless cheese pizza</p>
 </div>
 </div>
@@ -377,7 +386,8 @@
 </div>
 <div class="menu-info">
 <h4 class="title"><a href="menu-v3.html">chicken pizza</a></h4>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                             crust a timeless cheese pizza</p>
 </div>
 </div>
@@ -390,7 +400,8 @@
 </div>
 <div class="menu-info">
 <h4 class="title"><a href="menu-v3.html">Garden veggie</a></h4>
-<p>Melting mozzarella atop a crisp
+<p>Melting mozzarella atop a crisp
+
                                             crust a timeless cheese pizza</p>
 </div>
 </div>
@@ -420,8 +431,10 @@
 <div class="footer-logo mb-25">
 <a href="index.html"><img alt="Brand Logo" src="assets/images/logo/logo-white.png"/></a>
 </div>
-<p>Discover culinary delights recipes 
-                                        and inspiration in our delightful 
+<p>Discover culinary delights recipes 
+
+                                        and inspiration in our delightful 
+
                                         food haven..</p>
 <ul class="social-link">
 <li><a href="menu-details.html"><i class="fab fa-facebook-f"></i></a></li>
@@ -474,7 +487,7 @@
 </ul>
 </div>
 </div>
-</div>
+<!--====== Back To Topp ======-->
 </div>
 </div>
 </div>
