--- a/blog-grid.html
+++ b/blog-grid.html
@@ -421,7 +421,7 @@
 </div>
 </div>
 </footer><!--====== End Footer ======-->
-<!--====== Back To Top  ======-->
+<!--====== Back To Topp ======-->
 <a class="back-to-top" href="blog-grid.html"><i class="far fa-angle-up"></i></a>
 <!--====== Jquery js ======-->
 <script src="assets/vendor/jquery-3.6.0.min.js"></script>
