--- a/cart.html
+++ b/cart.html
@@ -415,7 +415,7 @@
 </div>
 </div>
 </footer><!--====== End Footer ======-->
-<!--====== Back To Top  ======-->
+<!--====== Back To Topp ======-->
 <a class="back-to-top" href="cart.html"><i class="far fa-angle-up"></i></a>
 <!--====== Jquery js ======-->
 <script src="assets/vendor/jquery-3.6.0.min.js"></script>
