--- a/chefs.html
+++ b/chefs.html
@@ -423,7 +423,7 @@
 </div>
 </div>
 </footer><!--====== End Footer ======-->
-<!--====== Back To Top  ======-->
+<!--====== Back To Topp ======-->
 <a class="back-to-top" href="chefs.html"><i class="far fa-angle-up"></i></a>
 <!--====== Jquery js ======-->
 <script src="assets/vendor/jquery-3.6.0.min.js"></script>
