--- a/gallery.html
+++ b/gallery.html
@@ -430,8 +430,8 @@
     </footer><!--====== End Footer ======-->
     <!--====== Atualiza o ano automaticamente  ======-->
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-    <!--====== Back To Topp ======-->
-    <a class="back-to-top" href="gallery.html"><i class="far fa-angle-up"></i></a>
+    <!--====== WhatsApp Button  ======-->
+    <a class="whatsapp-button" href="https://wa.me/5512997255608" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <!--====== Jquery js ======-->
     <script src="assets/vendor/jquery-3.6.0.min.js"></script>
     <!--====== Popper js ======-->
