--- a/faq.html
+++ b/faq.html
@@ -474,8 +474,8 @@
     </footer>
     <!--====== End Footer ======-->
     
-    <!--====== Back To Topp ======-->
-    <a class="back-to-top" href="faq.html"><i class="far fa-angle-up"></i></a>
+    <!--====== WhatsApp Button  ======-->
+    <a class="whatsapp-button" href="https://wa.me/5512997255608" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <!--====== Jquery js ======-->
     <script src="assets/vendor/jquery-3.6.0.min.js"></script>
     <!--====== Popper js ======--><!--====== Atualiza o ano automaticamente  ======-->
