--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
         </div>
     </div><!--====== End Sidemenu-wrapper-cart Area ======-->
     <!--====== Start Header Area ======-->
-    <header class="header-area page-header">
+    <header class="header-area header-one navigation-white transparent-header">
         <div class="container">
             <div class="header-navigation">
                 <div class="nav-overlay"></div>
@@ -186,17 +186,17 @@
     </header><!--====== End Header Area ======-->
     <!--====== Start Page Section ======-->
     <section class="page-banner">
-        <div class="page-bg-wrapper p-r z-1 bg_cover pt-100 pb-110"
+        <div class="page-bg-wrapper p-r z-1 bg_cover pt-180 pb-110"
             style="background-image: url(assets/images/bg/page-bg.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <!--=== Page Banner Content ===-->
                         <div class="page-banner-content text-center">
-                            <h1 class="page-title">Contact us</h1>
+                            <h1 class="page-title">Contato</h1>
                             <ul class="breadcrumb-link">
-                                <li><a href="index.html">Home</a></li>
-                                <li class="active">Contact</li>
+                                <li><a href="index.html">Início</a></li>
+                                <li class="active">Contato</li>
                             </ul>
                         </div>
                     </div>
