--- a/gallery.html
+++ b/gallery.html
@@ -107,7 +107,7 @@
         </div>
     </div><!--====== End Sidemenu-wrapper-cart Area ======-->
     <!--====== Start Header Area ======-->
-    <header class="header-area page-header">
+    <header class="header-area header-one navigation-white transparent-header">
         <div class="container">
             <!--===  Header Navigation  ===-->
             <div class="header-navigation">
@@ -187,7 +187,7 @@
     </header><!--====== End Header Area ======-->
     <!--====== Start Page Section ======-->
     <section class="page-banner">
-        <div class="page-bg-wrapper p-r z-1 bg_cover pt-100 pb-110"
+        <div class="page-bg-wrapper p-r z-1 bg_cover pt-180 pb-110"
             style="background-image: url(assets/images/bg/page-bg.jpg);">
             <div class="container">
                 <div class="row">
