--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,9 @@
                                 src="assets/images/logo/logo-main.png" /></a>
                     </div>
                     <div class="nav-inner-menu">
+                        <button class="mobile-nav-toggle d-block d-xl-none" aria-label="Abrir menu">
+                            <i class="fas fa-bars"></i>
+                        </button>
                         <!--=== Foodix Nav Menu ===-->
                         <div class="foodix-nav-menu">
                             <!--=== Mobile Logo ===-->
@@ -203,7 +206,55 @@
                 </div>
             </div>
         </div>
-    </section><!--====== End Page Section ======-->
+    </section>
+    <section class="contact-info-section pt-130 pb-100">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <!--=== Iconic Info Box ===-->
+                    <div class="iconic-info-box style-one text-center mb-30 wow fadeInDown">
+                        <div class="icon">
+                            <i class="far fa-map-marker-alt"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Address</h4>
+                            <p>4140 Parker Rd. Allentown, <br />
+
+                                New Mexico 31134</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <!--=== Iconic Info Box ===-->
+                    <div class="iconic-info-box style-one text-center mb-30 wow fadeInDown">
+                        <div class="icon">
+                            <i class="far fa-envelope"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Email</h4>
+                            <p><a href="mailto:foodixsupport@gmail.com">foodixsupport@gmail.com</a></p>
+                            <p><a href="mailto:foodixinfo@gmail.com">foodixinfo@gmail.com</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <!--=== Iconic Info Box ===-->
+                    <div class="iconic-info-box style-one text-center mb-30 wow fadeInDown">
+                        <div class="icon">
+                            <i class="far fa-map-marker-alt"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Phone</h4>
+                            <p><a href="tel:+555-1234567890">+555-123 456 7890</a></p>
+                            <p><a href="tel:+555-1234567890">+555-123 776 8875</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!--====== End Contact Info Section ======-->
+    
+    <!--====== End Page Section ======-->
     <!--====== Start Contact Section ======-->
     <section class="contact-section pt-120 gray-bg">
         <div class="container">
@@ -270,52 +321,7 @@
         </div>
     </section><!--====== End Contact Section ======-->
     <!--====== End Contact Info Section ======-->
-    <section class="contact-info-section pt-130 pb-100">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <!--=== Iconic Info Box ===-->
-                    <div class="iconic-info-box style-one text-center mb-30 wow fadeInDown">
-                        <div class="icon">
-                            <i class="far fa-map-marker-alt"></i>
-                        </div>
-                        <div class="content">
-                            <h4>Address</h4>
-                            <p>4140 Parker Rd. Allentown, <br />
-
-                                New Mexico 31134</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <!--=== Iconic Info Box ===-->
-                    <div class="iconic-info-box style-one text-center mb-30 wow fadeInDown">
-                        <div class="icon">
-                            <i class="far fa-envelope"></i>
-                        </div>
-                        <div class="content">
-                            <h4>Email</h4>
-                            <p><a href="mailto:foodixsupport@gmail.com">foodixsupport@gmail.com</a></p>
-                            <p><a href="mailto:foodixinfo@gmail.com">foodixinfo@gmail.com</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <!--=== Iconic Info Box ===-->
-                    <div class="iconic-info-box style-one text-center mb-30 wow fadeInDown">
-                        <div class="icon">
-                            <i class="far fa-map-marker-alt"></i>
-                        </div>
-                        <div class="content">
-                            <h4>Phone</h4>
-                            <p><a href="tel:+555-1234567890">+555-123 456 7890</a></p>
-                            <p><a href="tel:+555-1234567890">+555-123 776 8875</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!--====== End Contact Info Section ======-->
+    
     <!--====== Start Map Section ======-->
     <section class="contact-map-section">
         <div class="contact-map-box wow fadeInDown">
@@ -443,6 +449,8 @@
     <script src="assets/vendor/wow.min.js"></script>
     <!--====== Main js ======-->
     <script src="assets/js/theme.js"></script>
+    <!--====== Custom js for mobile nav ======-->
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
