--- a/menu-v3.html
+++ b/menu-v3.html
@@ -112,6 +112,9 @@
 <a class="brand-logo" href="index.html"><img alt="Logo" src="assets/images/logo/logo-main.png"/></a>
 </div>
 <div class="nav-inner-menu">
+    <button class="mobile-nav-toggle d-block d-xl-none" aria-label="Abrir menu">
+        <i class="fas fa-bars"></i>
+    </button>
 <!--=== Foodix Nav Menu ===-->
 <div class="foodix-nav-menu">
 <!--=== Mobile Logo ===-->
@@ -831,5 +834,7 @@
 <script src="assets/vendor/wow.min.js"></script>
 <!--====== Main js ======-->
 <script src="assets/js/theme.js"></script>
+    <!--====== Custom js for mobile nav ======-->
+    <script src="assets/js/custom.js"></script>
 </body>
 </html>
