--- a/checkout.html
+++ b/checkout.html
@@ -113,6 +113,9 @@
 <a class="brand-logo" href="index.html"><img alt="Logo" src="assets/images/logo/logo-main.png"/></a>
 </div>
 <div class="nav-inner-menu">
+    <button class="mobile-nav-toggle d-block d-xl-none" aria-label="Abrir menu">
+        <i class="fas fa-bars"></i>
+    </button>
 <!--=== Foodix Nav Menu ===-->
 <div class="foodix-nav-menu">
 <!--=== Mobile Logo ===-->
