--- a/faq.html
+++ b/faq.html
@@ -118,6 +118,9 @@
                                 src="assets/images/logo/logo-main.png" /></a>
                     </div>
                     <div class="nav-inner-menu">
+                        <button class="mobile-nav-toggle d-block d-xl-none" aria-label="Abrir menu">
+                            <i class="fas fa-bars"></i>
+                        </button>
                         <!--=== Foodix Nav Menu ===-->
                         <div class="foodix-nav-menu">
                             <!--=== Mobile Logo ===-->
