--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
                                 src="assets/images/logo/logo-white.png" /></a>
                     </div>
                     <div class="nav-inner-menu">
+                        <!-- Mobile nav toggle -->
+                        <button class="mobile-nav-toggle d-block d-xl-none" aria-label="Abrir menu">
+                            <i class="fas fa-bars"></i>
+                        </button>
                         <!--=== Foodix Nav Menu ===-->
                         <div class="foodix-nav-menu">
                             <!--=== Mobile Logo ===-->
@@ -1164,6 +1168,8 @@
     <script src="assets/vendor/wow.min.js"></script>
     <!--====== Main js ======-->
     <script src="assets/js/theme.js"></script>
+    <!--====== Custom js for mobile nav ======-->
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
