--- a/menu-v2.html
+++ b/menu-v2.html
@@ -119,6 +119,9 @@
                                 src="assets/images/logo/logo-main.png" /></a>
                     </div>
                     <div class="nav-inner-menu">
+                        <button class="mobile-nav-toggle d-block d-xl-none" aria-label="Abrir menu">
+                            <i class="fas fa-bars"></i>
+                        </button>
                         <!--=== Foodix Nav Menu ===-->
                         <div class="foodix-nav-menu">
                             <!--=== Mobile Logo ===-->
@@ -686,6 +689,8 @@
     <script src="assets/vendor/wow.min.js"></script>
     <!--====== Main js ======-->
     <script src="assets/js/theme.js"></script>
+    <!--====== Custom js for mobile nav ======-->
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
